refactor response classes